[package]
name = "much"
version = "0.1.0"
authors = ["Michael Greenberg <michael.greenberg@pomona.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^0.2", features = [ "full" ] }
tokio-util = { version = "^0.3", features = [ "full" ] }
futures = "0.3.0"
hyper = "^0.13"