[package]
name = "much"
version = "0.1.0"
authors = ["Michael Greenberg <michael.greenberg@pomona.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^0.2", features = [ "full" ] }
tokio-util = { version = "^0.3", features = [ "full" ] }
tracing = "^0.1"
tracing-subscriber = "^0.2"
futures = "0.3.0"
hyper = "^0.13"
clap = "~2.33"
rand = "^0.7"
base64 = "^0.12"
rust-argon2 = "^0.8"